# ChangeLog for dev-util/aap
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/aap/ChangeLog,v 1.26 2007/07/25 17:33:23 armin76 Exp $

  25 Jul 2007; Raúl Porcel <armin76@gentoo.org> aap-1.055.ebuild,
  aap-1.070.ebuild, aap-1.072.ebuild, aap-1.076.ebuild:
  alpha stable

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> aap-1.076.ebuild:
  Stable on sparc

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> aap-1.076.ebuild:
  ia64 stable

  21 Mar 2007; Raúl Porcel <armin76@gentoo.org> aap-1.076.ebuild:
  x86 stable

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  29 Oct 2005; Fabian Groffen <grobian@gentoo.org> aap-1.076.ebuild:
  Marked ~ppc-macos (bug #109955)

*aap-1.076 (01 Jul 2005)

  01 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> +aap-1.076.ebuild:
  Version bump.

  07 May 2005; David Holm <dholm@gentoo.org> aap-1.072.ebuild:
  Added to ~ppc.

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> aap-1.072.ebuild:
  stable on ia64

  07 Feb 2005; Bryan Østergaard <kloeri@gentoo.org> aap-1.072.ebuild:
  Stable on alpha.

  28 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> -aap-1.000-r1.ebuild,
  -aap-1.000.ebuild, -aap-1.010.ebuild, aap-1.072.ebuild:
  x86 sparc mips stable, tidy out older versions

  31 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*aap-1.072 (21 Dec 2004)

  21 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> +aap-1.072.ebuild:
  Bump, bug #75148

  09 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> aap-1.070.ebuild:
  Stable on alpha.

  31 Oct 2004; Ciaran McCreesh <ciaranm@gentoo.org> aap-1.070.ebuild:
  Stable on sparc, mips, x86

*aap-1.070 (02 Oct 2004)

  02 Oct 2004; Ciaran McCreesh <ciaranm@gentoo.org> +aap-1.070.ebuild:
  Bump, bug #66137

  28 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> aap-1.055.ebuild: