@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/aap/aap-1.076.ebuild,v 1.6 2007/07/25 17:33:23 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/aap/aap-1.076.ebuild,v 1.7 2008/01/26 19:12:20 grobian Exp $
 
 IUSE="doc"
 
@@ -9,13 +9,13 @@ HOMEPAGE="http://www.a-a-p.org/"
 SRC_URI="mirror://sourceforge/a-a-p/${P}.zip"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ia64 ~mips ~ppc ~ppc-macos sparc x86"
+KEYWORDS="alpha ~amd64 ia64 ~mips ~ppc sparc x86"
 DEPEND="app-arch/unzip"
 RDEPEND=">=dev-lang/python-1.5"
 S=${WORKDIR}/${PN}
 
 src_unpack() {
-	mkdir ${S} && cd ${S} && unzip -q ${DISTDIR}/${A} || die
+	mkdir "${S}" && cd "${S}" && unzip -q "${DISTDIR}"/${A} || die
 }
 
 src_install() {
@@ -24,7 +24,7 @@ src_install() {
 
 	if use doc ; then
 		dodir /usr/share/doc/${PF}/html
-		cp -R doc/* ${D}/usr/share/doc/${PF}/html
+		cp -R doc/* "${D}"/usr/share/doc/${PF}/html
 	fi
 	rm doc/*.html
 	rm -fr doc/images
@@ -35,10 +35,10 @@ src_install() {
 
 	# Move the remainder directly into the dest tree
 	dodir /usr/share
-	cd ${WORKDIR}
-	mv aap ${D}/usr/share
+	cd "${WORKDIR}"
+	mv aap "${D}"/usr/share
 
 	# Create a symbolic link for the executable
 	dodir /usr/bin
-	ln -s ../share/aap/aap ${D}/usr/bin/aap
+	ln -s ../share/aap/aap "${D}"/usr/bin/aap
 }
