@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cook/Attic/cook-2.26.ebuild,v 1.5 2007/08/13 20:46:10 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cook/Attic/cook-2.26.ebuild,v 1.6 2008/01/26 19:15:29 grobian Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.canb.auug.org.au/~millerp/cook/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ppc ~ppc-macos sparc x86"
+KEYWORDS="~amd64 ppc sparc x86"
 IUSE=""
 
 DEPEND="sys-devel/bison"
