@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/cook
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cook/Attic/ChangeLog,v 1.19 2007/12/25 14:04:09 phreak Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cook/Attic/ChangeLog,v 1.20 2008/01/26 19:15:29 grobian Exp $
+
+  26 Jan 2008; Fabian Groffen <grobian@gentoo.org> cook-2.24.ebuild,
+  cook-2.26.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
   25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing karltk from metadata.xml as per #200332. Assigning to
